...
    "applock.cancel": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
          }
        }
      }
    },
    "applock.cover.deleteEverything": {
      "extractionState": "manual",
...
    "applock.deleteEverything.confirm.title": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete everything?"
          }
        }
      }
    },
    "applock.deleteEverything.done.message": {
      "extractionState": "manual",
...
    "applock.deleteFromThisDevice.confirm.title": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete from this device?"
          }
        }
      }
    },
    "applock.deleteFromThisDevice.done.message": {
      "extractionState": "manual",
...
    "applock.done": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Done"
          }
        }
      }
    },
    "applock.faceOrTouchOnly.turnOn": {
      "extractionState": "manual",
...
    "plan.today": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Today's plan"
          }
        }
      }
    },
    "plan.tomorrow": {
      "extractionState": "manual",
...
    "export.title": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Export"
          }
        }
      }
    },
    "export.from": {
      "extractionState": "manual",
...
    "export.makePDF": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Make PDF"
          }
        }
      }
    },
    "export.shareDisclosure": {
      "extractionState": "manual",
...
